# aoc2024

./: Cargo.toml
src/: main.rs  puzzle1.rs  solver.rs
src/puzzles/: puzzle1.rs  puzzle2.rs  puzzle3.rs  puzzle4.rs  puzzle5.rs  puzzle6.rs  puzzle7.rs
